--- a/style.css
+++ b/style.css
@@ -1,34 +1,11 @@
 body {
     font-family: sans-serif;
-    background-color: #ffffff;
+    background-color: #dfeff0;
 }
 .file-upload {
-    background-color: #ffffff;
-    width: 400px;
+    width: 360px;
     margin: 0 auto;
     padding: 20px;
-}
-.file-upload-btn {
-    width: 100%;
-    margin: 0;
-    background: #1fb264;
-    padding: 10px;
-    border-radius: 10px;
-    border-bottom: 4px solid #15824b;
-    transition: all 0.2s ease;
-    outline: none;
-    text-transform: uppercase;
-    font-weight: 700;
-}
-.file-upload-btn:hover {
-    background: #1aa059;
-    color: #ffffff;
-    transition: all 0.2s ease;
-    cursor: pointer;
-}
-.file-upload-btn:active {
-    border: 0;
-    transition: all 0.2s ease;
 }
 .file-upload-content {
     display: none;
@@ -52,7 +29,7 @@ body {
 }
 .image-dropping,
 .image-upload-wrap:hover {
-    background-color: aliceblue;
+    background-color: #bdd8da;
 }
 .image-title-wrap {
     padding: 25px;
@@ -65,7 +42,7 @@ body {
     text-transform: uppercase;
     color: #15824b;
     padding: 60px 0;
-    font-size: 2rem;
+    font-size: 1.5rem;
 }
 .file-upload-image {
     margin: auto;
@@ -100,7 +77,7 @@ body {
     border-color: #ffffff;
 }
 .section {
-    margin-top: 80px;
+    margin-top: 60px;
 }
 .title {
     text-align: center;
@@ -116,7 +93,6 @@ body {
         font-size: 2rem;
     }
 }
-
 
 
 img {
